# test1

./: .gitignore  README.md  dd.py  generated_code.py  pet_words.txt  pyproject.toml  requirements.txt  桌宠.py  桌宠gpt4.1.py  桌宠gpt4.1_gif.py
src/: logging_learn.py
src/my_logging_project.egg-info/: PKG-INFO  SOURCES.txt
